Fix: Text-based artist and album names were not visible

--- a/Theme/ElegantFin-theme-nightly.css
+++ b/Theme/ElegantFin-theme-nightly.css
@@ -717,7 +717,9 @@ html {
 .layout-mobile #itemDetailPage:has(.detailLogo.hide) .detailImageContainer .card,
 .layout-mobile #itemDetailPage:has(.detailImageContainer .card.backdropCard) .detailImageContainer .card,
 .layout-mobile #itemDetailPage:has(.detailImageContainer .card.backdropCard) .infoWrapper .parentNameLast,
-.layout-mobile #itemDetailPage:has(.detailImageContainer .card.backdropCard) .infoWrapper .parentName {
+.layout-mobile #itemDetailPage:has(.detailImageContainer .card.backdropCard) .infoWrapper .parentName,
+.layout-mobile #itemDetailPage:has(.nameContainer .musicParentName) .infoWrapper .itemName,
+.layout-mobile #itemDetailPage:has(.nameContainer .musicParentName) .infoWrapper .parentName {
     display: block;
 }
 
